--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,4 +18,4 @@ dev_dependencies:
 flutter:
   plugin:
     androidPackage: com.jzoom.amaplocation
-    pluginClass: AmapLocationPlugin
+    pluginClass: AMapLocationPlugin
